fix: overflow on scaling

--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 1920px;
+  min-height: 100vh;
 }
 
 .main {
@@ -16,6 +17,5 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 1280px;
-  height: 1080px - 88px; // minus header height
-  max-height: 1080px - 88px; // minus header height
+  height: 90vh; // minus header height
 }
