--- a/src/components/burger-ingredients/burger-ingredients.module.scss
+++ b/src/components/burger-ingredients/burger-ingredients.module.scss
@@ -5,9 +5,8 @@
   flex-direction: column;
 
   box-sizing: border-box;
-  width: 100%;
-  height: 1080px - 88px; // minus header height
-  max-height: 1080px - 88px; // minus header height
+  width: 100%; // minus header height
+  height: 90vh; // minus header height
 
   &__content {
     position: relative;
