--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 @import './vendor/normalize.css';
 
 html {
-  height: 100%;
+  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
@@ -11,7 +12,6 @@ body {
   justify-content: flex-start;
 
   height: 100%;
-  max-height: 1080px;
   margin: 0;
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
